Admin page. (create channel module for admin page.) Login page.

--- a/backbone-spa-ui/static/css/sb-admin.css
+++ b/backbone-spa-ui/static/css/sb-admin.css
@@ -36,6 +36,10 @@ body {
     #wrapper {
         padding-left: 225px;
     }
+    
+    #login {
+        margin-left: -225px;
+    }
 
     #page-wrapper {
         padding: 10px;
